<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#213541"
    android:descendantFocusability="afterDescendants"
    tools:context=".Main_y_category.MainActivity">

    <Button
        android:id="@+id/btn_favoritas"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:onClick="onclick"
        android:text="@string/favorites"
        app:layout_constraintEnd_toEndOf="@+id/btn_ecua"
        app:layout_constraintStart_toStartOf="@+id/btn_ecua"
        app:layout_constraintTop_toBottomOf="@+id/btn_ecua" />


    <Button
        android:id="@+id/btn_ecua"
        android:layout_width="361dp"
        android:layout_height="61dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="onClick"
        android:text="@string/equations"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_codg_qr"
        android:layout_width="281dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:onClick="onClick"
        android:text="@string/scanQR"
        app:layout_constraintEnd_toEndOf="@+id/btn_favoritas"
        app:layout_constraintStart_toStartOf="@+id/btn_favoritas"
        app:layout_constraintTop_toBottomOf="@+id/btn_favoritas" />

    <ImageButton
        android:id="@+id/agaregar_ecua"
        android:layout_width="115dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_codg_qr"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/codigo-Qr"
        app:layout_constraintTop_toBottomOf="@+id/btn_codg_qr"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@drawable/add_new_item" />

    <ImageView
        android:id="@+id/codigo-Qr"
        android:layout_width="134dp"
        android:layout_height="121dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_codg_qr"
        app:layout_constraintTop_toBottomOf="@+id/btn_codg_qr"
        app:layout_constraintVertical_bias="0.01999998"
        app:srcCompat="@drawable/add_qr" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="234dp"
        android:layout_marginLeft="234dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="234dp"
        android:layout_marginRight="234dp"
        android:text="@string/titleAppFormulas"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="@font/architects_daughter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>